--- a/WebThuvien/Views/Shared/_LayoutAdmin.cshtml
+++ b/WebThuvien/Views/Shared/_LayoutAdmin.cshtml
@@ -135,12 +135,19 @@
                         <ul class="submenu">
                             <li><a href="/Admin/Sach">Danh mục sách</a></li>
                             <li><a href="/Admin/UploadSach">Thêm mới sách</a></li>
-                            <li><a href="/Admin/MuonSach">Mượn sách</a></li>
-                            <li><a href="/Admin/TraSach">Trả sách</a></li>
                             <li><a href="/Admin/DSTacgia">Danh sách tác giả</a></li>
                             <li><a href="/Admin/DSLinhvuc">Danh sách lĩnh vực</a></li>
                             <li><a href="/Admin/DSLoaisach">Danh sách loại sách</a></li>
                             <li><a href="/Admin/DSNXB">Danh sách nhà xuất bản</a></li>
+                        </ul>
+                    </li>
+                    <li class="dropdown">
+                        <a href="javascript:;" class="dropdown-toggle">
+                            <span class="micon dw dw-user1"></span><span class="mtext">Mượn trả sách</span>
+                        </a>
+                        <ul class="submenu">
+                            <li><a href="/Admin/MuonSach">Mượn sách</a></li>
+                            <li><a href="/Admin/TraSach">Trả sách</a></li>
                         </ul>
                     </li>
                     <li class="dropdown">
@@ -150,13 +157,22 @@
                         <ul class="submenu">
                             <li><a href="/Admin/Taikhoan">Danh sách tài khoản</a></li>
                             <li><a href="/Admin/The">Danh sách thẻ thư viện</a></li>
-                            <li><a href="/Admin/Themoi">Tạo thẻ mới</a></li>
+                            <li><a href="/Admin/Themthe">Tạo thẻ mới</a></li>
                         </ul>
                     </li>
                     
                     <li class="dropdown">
                         <a href="javascript:;" class="dropdown-toggle">
-                            <span class="micon dw dw-analytics-21"></span><span class="mtext">Thống kê và báo cáo</span>
+                            <span class="micon dw dw-analytics-21"></span><span class="mtext">Sự kiện</span>
+                        </a>
+                        <ul class="submenu">
+                            <li><a href="#">Danh sách hoạt động</a></li>
+                            <li><a href="#">Thêm hoạt động</a></li>
+                        </ul>
+                    </li>
+                    <li class="dropdown">
+                        <a href="javascript:;" class="dropdown-toggle">
+                            <span class="micon dw dw-analytics-21"></span><span class="mtext">Thống kê</span>
                         </a>
                         <ul class="submenu">
                             <li><a href="#">Sách xem nhiều</a></li>
