thêm phần hoạt động

--- a/WebThuvien/Views/Home/HeaderSection.cshtml
+++ b/WebThuvien/Views/Home/HeaderSection.cshtml
@@ -55,8 +55,8 @@
                                     <ul class="nav navbar-nav">
                                         <li><a id="home-nav" href="/home" style="color:#84bb45">Trang chủ</a></li>
                                         <li><a id="sach-nav" href="/sach">Sách &amp; Đa phương tiện</a></li>
-                                        <li class="dropdown">
-                                            <a data-toggle="dropdown" class="dropdown-toggle disabled" href="/news">Tin tức &amp; Sự kiện</a>
+                                        <li>
+                                            <a id="hoatdong" href="/hoatdong">Tin tức &amp; Sự kiện</a>
                                         </li>
                                         <li><a href="/">Dịch vụ</a></li>
                                         <li><a href="/">Liên hệ</a></li>
