--- a/WebThuvien/Views/Shared/_LayoutAdmin.cshtml
+++ b/WebThuvien/Views/Shared/_LayoutAdmin.cshtml
@@ -146,6 +146,7 @@
                             <span class="micon dw dw-user1"></span><span class="mtext">Mượn trả sách</span>
                         </a>
                         <ul class="submenu">
+                            <li><a href="/Admin/Danhmucsachmuon">Danh mục sách mượn</a></li>
                             <li><a href="/Admin/MuonSach">Mượn sách</a></li>
                             <li><a href="/Admin/TraSach">Trả sách</a></li>
                         </ul>
@@ -166,8 +167,8 @@
                             <span class="micon dw dw-analytics-21"></span><span class="mtext">Sự kiện</span>
                         </a>
                         <ul class="submenu">
-                            <li><a href="#">Danh sách hoạt động</a></li>
-                            <li><a href="#">Thêm hoạt động</a></li>
+                            <li><a href="/Admin/DSHoatdong">Danh sách hoạt động</a></li>
+                            <li><a href="/Admin/Themhoatdong">Thêm hoạt động</a></li>
                         </ul>
                     </li>
                     <li class="dropdown">
