--- a/WebThuvien/Views/Shared/_LayoutHomeClient.cshtml
+++ b/WebThuvien/Views/Shared/_LayoutHomeClient.cshtml
@@ -46,7 +46,7 @@
                         <ul>
                             <li><a href="/home">Trang chủ</a></li>
                             <li><a href="/sach">Sách &amp; Đa phương tiện</a></li>
-                            <li><a href="#">Tin tức &amp; Sự kiện</a></li>
+                            <li><a href="/hoatdong">Tin tức &amp; Sự kiện</a></li>
                             <li><a href="#">Dịch vụ</a></li>
                             <li><a href="#">Liên hệ</a></li>
                         </ul>
@@ -130,8 +130,8 @@
         var pathName = location.pathname.toLowerCase();
         var patt1 = new RegExp("/home");
         var patt2 = new RegExp("/sach");
-        var patt3 = new RegExp("/thongke");
-        var patt4 = new RegExp("/hoatdong");
+        var patt4 = new RegExp("/thongke");
+        var patt3 = new RegExp("/hoatdong");
         var patt5 = new RegExp("/baocao");
         // || pathName == "/"
         if (patt1.exec(pathName) != null) {
@@ -140,8 +140,8 @@
         else if (patt2.exec(pathName) != null) {
             $("#sach-nav").css("color", "#84bb45");
         }
-        else {
-            $("#home1-nav").css("color", "#84bb45");
+        else if (patt3.exec(pathName) != null) {
+            $("#hoatdong").css("color", "#84bb45");
         }
 
     }
